--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "I need a subtitle, too"
 header-img: "img/home-bg.jpg"
 ---
 
