--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "I need a subtitle, too"
+description: "Videogame adventures, high tech musings, and general mayhem"
 header-img: "img/home-bg.jpg"
 ---
 
