Update about/contact images.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "This is what I do."
+description: "Who's running this thing?"
 header-img: "img/about-bg.jpg"
 ---
 
