--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,7 @@
 ---
 layout: page
+noindex: true
+sitemap: false
 title: "Tags"
 description: "Here's what I write about.  Usually."
 header-img: "img/tags-bg.jpg"
